--- a/views/newPassenger.ejs
+++ b/views/newPassenger.ejs
@@ -140,7 +140,7 @@
                 type="button"
                 class="form-control btn btn-lg rounded-pill bg-dark text-white"
                 value="Pay"
-                id="submit-pay"
+                id="rzp-button1"
                 onclick="verifyDetails()"
             />
         </div>
@@ -153,23 +153,25 @@
 </div>
 <%- include("partials/footer") %>
 <script type="text/javascript" src="./passenger.js"></script>
+<!-- <script type="text/javascript" src="./payments.js"></script> -->
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
-    bt = document.getElementById("boardingpt");
-    bt.addEventListener("change", async () => {
-        document.getElementById("submit-pay").disabled = true;
-        let boardingpt = bt.value;
-        let price=await  getPrice(boardingpt)
-        let seats=await getSeats(boardingpt)
-        if(seats.totalseats<1){
-            swal({
-                title: "Oh no!",
-                text:"Seat Full!",
-                icon:"warning"
-            })
-            document.getElementById("submit-pay").value="Seat Full!"
-        }else{
-            document.getElementById("submit-pay").disabled = false;
-            document.getElementById("submit-pay").value='Pay ₹'+price[0].price
-        }
-    });
+    // bt = document.getElementById("boardingpt");
+    // bt.addEventListener("change", async () => {
+    //     document.getElementById("rzp-button1").disabled = true;
+    //     let boardingpt = bt.value;
+    //     let price=await  getPrice(boardingpt)
+    //     let seats=await getSeats(boardingpt)
+    //     if(seats.totalseats<1){
+    //         swal({
+    //             title: "Oh no!",
+    //             text:"Seat Full!",
+    //             icon:"warning"
+    //         })
+    //         document.getElementById("rzp-button1").value="Seat Full!"
+    //     }else{
+    //         document.getElementById("rzp-button1").disabled = false;
+    //         document.getElementById("rzp-button1").value='Pay ₹'+price[0].price
+    //     }
+    // });
 </script>
